<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- GENERAL -->
    <string name="app_name">BoogDroid</string>
    <string name="no_items">No elements.</string>
    <string name="invalid_product">Invalid product</string>
    <string name="invalid_bug">Invalid bug</string>

    <!-- REGISTER -->
    <string name="server_name">Server name</string>
    <string name="url">URL</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="manage_servers">Manage servers</string>
    <string name="add_server">Add server</string>
    <string name="edit_server">Edit server</string>
    <string name="name_cant_be_empty">Name can\'t be empty</string>
    <string name="server_with_that_name_exists">There\'s already a server with that name</string>
    <string name="url_cant_be_empty">The URL can\'t be empty</string>
    <string name="delete_server_title">Delete the server &lt;b>%1$s&lt;/b></string>
    <string name="delete_server_description">The server &lt;b>%1$s&lt;/b> and all it\'s configuration will be deleted.</string>

    <!-- INFO -->
    <string name="reporter">Reporter</string>
    <string name="assignee">Assignee</string>
    <string name="author">Author</string>
    <string name="add_comment">Add comment</string>
    <string name="status">Status:</string>
    <string name="resolution">Resolution:</string>
    <string name="invalid_change_status">Cannot change to that status</string>
    <string name="invalid_change_status_comment_required">Cannot change status, comment required</string>
</resources>
